<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/menu"
            android:enabled="true"
            android:icon="@drawable/ic_favourite_foreground"
            android:title="@string/menu"
            tools:targetApi="o" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_news_foreground"
            android:iconTint="@drawable/ic_news_background"
            android:title="@string/choose"
            tools:targetApi="o"/>
    <item
        android:id="@+id/product"
        android:icon="@drawable/ic_music_foreground"
        android:iconTint="@drawable/ic_music_background"
        android:title="@string/info"
        tools:targetApi="o"/>

    </menu>